try to fix min height problem on IOS devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@ html {
 }
 
 body {
-    min-height: 100dvh;
+    min-height: 100vh;
     text-rendering: optimizeLegibility;
 }
 
